[package]
name = "evntsrc-client"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.19"
tokio = "=0.2.0-alpha.6"
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls = "=0.4.0-alpha.4"
bytes = "0.4.12"
tracing = "0.1.10"
tokio-timer = "=0.3.0-alpha.6"

[patch.crates-io]

[dev-dependencies]
tracing-subscriber = "0.1.6"
#hyper = { version = "=0.13.0-alpha.4", features = [], path = "../hyper" }
#hyper-tls = { version = "=0.4.0-alpha.4", features = [], path = "../hyper-tls" }
